Fix a big margin before the SO tile on mobile

--- a/src/css/support-page.mobile.scss
+++ b/src/css/support-page.mobile.scss
@@ -85,6 +85,7 @@ html body .page-content-wrapper .site-header .site-header-content .site-nav #sea
                 padding-top: 65px;
                 line-height: 33px;
                 background-position: 30px 110px;
+                margin-top: 0;
 
                 p {
                     left: 30px;
